<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DescriptionActivity">

    <ImageView
        android:id="@+id/description_picture"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="45dp"
        android:layout_marginEnd="150dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="160dp"
        app:layout_constraintBottom_toTopOf="@+id/my_project_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_share" />

    <TextView
        android:id="@+id/description_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:layout_marginEnd="150dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="50dp"
        android:text="@string/temp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/description_body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_picture" />

    <TextView
        android:id="@+id/description_body"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="243dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:text="@string/ipsum"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_picture" />

    <corp.tuter.developerscompanionapp.CustomView.UserBarView
        android:id="@+id/user_bar_view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </corp.tuter.developerscompanionapp.CustomView.UserBarView>

    <corp.tuter.developerscompanionapp.CustomView.UserBarViewNotLoggedIn
        android:id="@+id/user_bar_view_2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/back_button"
        android:onClick="goBack"
        android:layout_width="69dp"
        android:layout_height="29dp"
        android:layout_marginBottom="46dp"
        android:layout_marginEnd="299dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="125dp"
        android:background="@color/loginDark"
        android:text="@string/back"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_body" />
</android.support.constraint.ConstraintLayout>