<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/framework_header4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="150dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="15dp"
        android:text="@string/tool"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/sub_recycler_view_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub_recycler_view_2"
        tools:text="@string/tool" />

    <TextView
        android:id="@+id/library_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="150dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="15dp"
        android:text="@string/library"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/sub_recycler_view_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub_recycler_view_1"
        tools:text="@string/library" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/sub_recycler_view_3"
        android:layout_width="395dp"
        android:layout_height="160dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/framework_header4" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/sub_recycler_view_1"
        android:layout_width="395dp"
        android:layout_height="160dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/library_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/framework_header" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/sub_recycler_view_2"
        android:layout_width="395dp"
        android:layout_height="160dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toTopOf="@+id/framework_header4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/library_header" />

    <TextView
        android:id="@+id/framework_header"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="150dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="40dp"
        android:text="@string/framework"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/sub_recycler_view_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/framework" />
</android.support.constraint.ConstraintLayout>