<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_2_3"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sub_header_2_3" />

        <TextView
            android:id="@+id/sub_header_2_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="150dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="10dp"
            android:text="@string/tool"
            app:layout_constraintBottom_toTopOf="@+id/recycler_2_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycler_2_2" />

        <TextView
            android:id="@+id/sub_header_2_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="150dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="30dp"
            android:text="@string/library"
            app:layout_constraintBottom_toTopOf="@+id/recycler_2_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_btn" />

        <corp.tuter.developerscompanionapp.CustomView.UserBarView
            android:id="@+id/user_bar_view"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </corp.tuter.developerscompanionapp.CustomView.UserBarView>

        <corp.tuter.developerscompanionapp.CustomView.UserBarViewNotLoggedIn
            android:id="@+id/user_bar_view_2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </corp.tuter.developerscompanionapp.CustomView.UserBarViewNotLoggedIn>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_2_2"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="11dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toTopOf="@+id/sub_header_2_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sub_header_2_2" />

        <TextView
            android:id="@+id/header_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="150dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="14dp"
            android:text="@string/temp"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/level1_main_image" />

        <ImageView
            android:id="@+id/level1_main_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="14dp"
            android:layout_marginEnd="165dp"
            android:layout_marginStart="165dp"
            android:layout_marginTop="150dp"
            android:contentDescription="Logo Image"
            app:layout_constraintBottom_toTopOf="@+id/header_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@android:drawable/ic_menu_share" />

        <Button
            android:onClick="goToFrameworkDescription"
            android:id="@+id/description_btn"
            android:layout_width="109dp"
            android:layout_height="36dp"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="150dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="30dp"
            android:background="@color/loginDark"
            android:text="@string/description"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/sub_header_2_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_2" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>